@@ -1,5 +1,9 @@
 # Final Year Project
 
-This repository has been created to store your final year project.
+# To run
+Run Driver.java, Might have to add:
+"vmArgs": "--module-path \"project/src/main/resources/com/example/project/javafx-sdk-19/lib\" --add-modules javafx.controls,javafx.fxml"
+to the run configuration, I loaded the program on a separate machie and it was already there so should be fine.
 
-You may edit it as you like, but please do not remove the default topics or the project members list. These need to stay as currently defined in order for your supervisor to be able to find your project.
+# Info on interacting with GUI
+In order: Select player amount, create players, start tournament, show points
